# meduzzen-test-task

messenger-app/: .env  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
messenger-app/.github/workflows/: ci.yml
messenger-app/api/: .env.example  Dockerfile  pyproject.toml
messenger-app/api/alembic/: env.py
messenger-app/api/alembic/versions/: 0b42f9d50e8f_add_messages_conv_created_index.py  5f34d0a0c24f_create_users.py  a58300d40bad_fix_user_id_to_uuid.py  be1d7d5318f9_create_conversations_messages_.py
messenger-app/api/app/: deps.py  main.py  ws.py
messenger-app/api/app/core/: config.py  db.py  security.py
messenger-app/api/app/models/: __init__.py  attachment.py  conversation.py  message.py  user.py
messenger-app/api/app/routers/: auth.py  conversations.py  messages.py  users.py
messenger-app/api/app/schemas/: __init__.py  auth.py  conversation.py  message.py  user.py
messenger-app/api/app/services/: storage.py
messenger-app/nginx/: Dockerfile  nginx.conf
messenger-app/web/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
messenger-app/web/src/: App.tsx  main.tsx  types.ts
messenger-app/web/src/api/: auth.ts  client.ts  conversations.ts  messages.ts
messenger-app/web/src/components/: AttachmentItem.tsx  MessageItem.tsx  Navbar.tsx
messenger-app/web/src/hooks/: useConversationWS.ts
messenger-app/web/src/lib/: api.ts
messenger-app/web/src/store/: auth.ts
(+5 files in other folders)
