[project]
name = "messenger-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2",
  "sqlalchemy>=2",
  "psycopg[binary]>=3.1",
  "alembic",
  "passlib[bcrypt]",
  "pyjwt",
  "python-multipart",
]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","T20"]
lint.ignore = ["E203","E266","E501","B008"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
